# Distributed-Sky-PoC

./: LICENSE  README.md  readme.md
airspace_service_provider/: CMakeLists.txt  package.xml  setup.py
airspace_service_provider/launch/: airspace_service_provider.launch  asp_infrastructure.launch  registry_connector.launch  test.launch
airspace_service_provider/scripts/: airspace_service_provider_node  registry_connector_node
airspace_service_provider/src/airspace_service_provider/: airspace_service_provider.py  nodes.py  registry_connector.py
distributed_sky/: CMakeLists.txt  package.xml
distributed_sky_uav/: CMakeLists.txt  package.xml  setup.py
distributed_sky_uav/launch/: confirmer_infrastructure.launch  route_confirmer.launch  test_ask_send.launch
distributed_sky_uav/msg/: RouteConfirmationRequest.msg  RouteConfirmationResponse.msg
distributed_sky_uav/scripts/: route_confirmer_node
distributed_sky_uav/src/distributed_sky_uav/: nodes.py  route_confirm.py
dsky_main/: CMakeLists.txt  package.xml  setup.py
dsky_main/abi/: ASPManifest.json
dsky_main/launch/: message_to_bag_to_ipfs.launch  test.launch
dsky_main/scripts/: message_to_bag_to_ipfs_node
dsky_main/src/dsky_main/: connectors.py  message_to_bag_to_ipfs.py  nodes.py  resolvers.py  utils.py
global_planner/: CMakeLists.txt  package.xml  setup.py
global_planner/launch/: global_planner.launch  global_planner_infrastructure.launch
global_planner/scripts/: global_planner_node
global_planner/src/global_planner/: converters.py  global_planner.py  nodes.py  segmenter.py
web_visualiser/: CMakeLists.txt  package.xml  setup.py
web_visualiser/launch/: web_visualiser.launch  web_visualiser_infrastructure.launch
web_visualiser/resources/web_static/css/: main.css
web_visualiser/resources/web_static/js/: LogController.js  MainController.js  MapController.js
web_visualiser/resources/web_templates/: index.html
web_visualiser/scripts/: web_visualiser_node
web_visualiser/src/web_visualiser/: nodes.py  web_visualiser.py
